--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,10 @@
-html {
-    background-color: rgb(0, 0, 0);
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
+
+html {
+    background: linear-gradient(135deg, #021a33 0%, #0b2c58 100%);
+}
+
