--- a/src/app/components/home/recipe/recipe.html
+++ b/src/app/components/home/recipe/recipe.html
@@ -61,6 +61,19 @@
       </div>
     </div>
 
+    <!-- Rating Section -->
+<div class="recipe-rating">
+  <div class="rating-stars">
+    @for (star of getRatingStars(); track $index) {
+      <span class="star" [ngClass]="star.class">{{ star.icon }}</span>
+    }
+  </div>
+  <div class="rating-info">
+    <span class="rating-value">{{ recipe().rating }}/10</span>
+    <span class="rating-label">Rating</span>
+  </div>
+</div>
+
     <!-- Action Buttons -->
     <div class="recipe-actions">
       <button class="btn-primary" (click)="onShowDetails()">
