adding reviews finished

--- a/src/app/components/home/home.html
+++ b/src/app/components/home/home.html
@@ -9,7 +9,9 @@
 @if(isShowingReviews()) {
   <app-recipe-reviews
   (close)="onCloseReviews()"
+  (handleReviewChange)="refreshRecipeRating()"
   [reviews]="reviewsToShow()"
+  [recipe]="recipeForReviews()"
   >
   </app-recipe-reviews>
 }
