--- a/src/app/components/login/login.css
+++ b/src/app/components/login/login.css
@@ -214,6 +214,7 @@ button[type="submit"]:hover::before {
   transition: all 0.3s ease;
   text-transform: uppercase;
   letter-spacing: 0.3px;
+  margin: 10px;
 }
 
 .bottom-container button:hover {
