--- a/src/app/components/home/recipe/recipe.html
+++ b/src/app/components/home/recipe/recipe.html
@@ -78,7 +78,7 @@
     <div class="recipe-actions">
       <button class="btn-primary" (click)="onShowDetails()">
         <span class="btn-icon">📖</span>
-        View full description
+        See details
       </button>
       
       <button class="btn-secondary" (click)="showRecipeReviews()">
