--- a/src/app/components/home/recipe/recipe-details/recipe-details.css
+++ b/src/app/components/home/recipe/recipe-details/recipe-details.css
@@ -322,6 +322,16 @@ dialog {
     color: #b4a3a3;
 }
 
+#modify-btn {
+    background-color: #47440e;
+    color: #b4a3a3;
+}
+
+#modify-btn:hover {
+    background-color: #8f911c;
+    color: #b4a3a3;
+}
+
 /* Responsive design */
 @media (max-width: 768px) {
     dialog {
@@ -709,18 +719,21 @@ dialog {
     }
 }
 
-/* Recipe Image Section */
 .recipe-image-section {
     width: 100%;
     height: 300px;
     overflow: hidden;
     position: relative;
+    background: rgba(101, 99, 191, 0.1);
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .recipe-image {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: contain;
     display: block;
 }
 
